Add checkbox state to MPV in healthcare
Adds a CSS background image which represents a tick when
the MPV checkbox is checked. This is applied as a helper
class for re-use across PDF sections.

--- a/app/views/pdfs/_healthcare_needs.html.erb
+++ b/app/views/pdfs/_healthcare_needs.html.erb
@@ -27,7 +27,7 @@
   <div class="health-section disabilities">
     <strong><%= t('.disabilities') %></strong>
     <div class="mpv-required">
-      <div class='<%= healthcare.mpv_required_class %>'></div>
+      <div class='check-box <%= healthcare.mpv_required_class %>'></div>
       <div><%= t('.mpv_required') %></div>
     </div>
     <div class="content"><%= healthcare.disabilities_details %></div>
