Remove duplication in date input fields

--- a/app/views/escorts/_move_information.html.erb
+++ b/app/views/escorts/_move_information.html.erb
@@ -10,7 +10,11 @@
 
 <div class="form-group">
   <%= date_fields(f, :date_of_travel) do %>
-      <%= render('/shared/date_of_travel_inputs', f: f) %>
+    <%= render 'shared/date_field_inputs',
+          f: f,
+          model: 'move_information',
+          date_field: 'date_of_travel',
+          hint: f.object.formatted_date_today %>
   <% end %>
 </div>
 
