--- a/app/views/escorts/_prisoner_information.html.erb
+++ b/app/views/escorts/_prisoner_information.html.erb
@@ -1,25 +1,19 @@
 <div class="form-group">
-  <%= f.label :prison_number, class: 'form-label-bold' %>
-  <%= f.object.prison_number %>
-</div>
-<div class="form-group">
-  <%= f.label :family_name, class: 'form-label-bold' %>
-  <%= f.text_field :family_name, class: 'string form-control' %>
-</div>
-<div class="form-group">
-  <%= f.label :forenames, class: 'form-label-bold' %>
-  <%= f.text_field :forenames, class: 'string form-control' %>
+  <span id="prison-number" class="form-label-bold" id="prison-number"><%= t('shared.prison_number') %></span>
+  <span aria-labelledby="prison-number"><%= f.object.prison_number %></span>
 </div>
 
-<div class="form-group">
-  <%= date_fields(f, :date_of_birth) do %>
-    <%= render 'shared/date_field_inputs',
-          f: f,
-          model: 'prisoner_information',
-          date_field: 'date_of_birth',
-          hint: nil %>
-  <% end %>
-</div>
+<%= single_field(f, :family_name) %>
+
+<%= single_field(f, :forenames) %>
+
+<%= date_fields(f, :date_of_birth) do %>
+  <%= render 'shared/date_field_inputs',
+    f: f,
+    model: 'prisoner_information',
+    date_field: 'date_of_birth',
+    hint: nil %>
+<% end %>
 
 <div class="form-group">
   <fieldset class="inline">
@@ -27,27 +21,18 @@
       <%= t('.sex.label') %>
     </legend>
     <%= f.label :sex, value: 'male', class: 'block-label' do %>
-        <%= t('.sex.male_label') %>
-        <%= f.radio_button :sex, 'male' %>
+      <%= t('.sex.male_label') %>
+      <%= f.radio_button :sex, 'male' %>
     <% end %>
     <%= f.label :sex, value: 'female', class: 'block-label' do %>
-        <%= t('.sex.female_label') %>
-        <%= f.radio_button :sex, 'female' %>
+      <%= t('.sex.female_label') %>
+      <%= f.radio_button :sex, 'female' %>
     <% end %>
   </fieldset>
 </div>
 
-<div class="form-group">
-  <%= f.label :nationality, class: 'form-label-bold' %>
-  <%= f.text_field :nationality, class: 'string form-control' %>
-</div>
+<%= single_field(f, :nationality) %>
 
-<div class="form-group">
-  <%= f.label :cro_number, class: 'form-label-bold' %>
-  <%= f.text_field :cro_number, class: 'string form-control' %>
-</div>
+<%= single_field(f, :cro_number) %>
 
-<div class="form-group">
-  <%= f.label :pnc_number, class: 'form-label-bold' %>
-  <%= f.text_field :pnc_number, class: 'string form-control' %>
-</div>
+<%= single_field(f, :pnc_number) %>
