Update PDF offence output to match latest design

--- a/app/assets/stylesheets/pdf/_offences.scss
+++ b/app/assets/stylesheets/pdf/_offences.scss
@@ -13,10 +13,8 @@
       }
     }
   }
-  .bordered-table {
-    margin-top: $margin-top;
-    td:first-child {
-      width: 85%;
-    }
+  .offences-output {
+    @extend .input;
+    min-height: $input-tall-height;
   }
 }
