--- a/app/assets/stylesheets/pdf/_variables.scss
+++ b/app/assets/stylesheets/pdf/_variables.scss
@@ -17,14 +17,15 @@ $padding-small: ($padding-unit / 2);
 $padding: 1em;
 $border-width: 0.1em;
 $input-height: 1.6em;
+$input-tall-height: ceil($input-height * 5);
 $input-min-width: 2em;
-$year-input-min-width: ceil(($input-min-width * 2));
+$year-input-min-width: ceil($input-min-width * 2);
 $margin-unit: 0.5em;
-$input-margin: ceil(($margin-unit * 2));
-$margin-bottom: ceil(($margin-unit * 1));
-$margin-right: ceil(($margin-unit * 2));
-$margin-top: ceil(($margin-unit * 2));
-$margin-large: ceil(($margin-unit * 3));
+$input-margin: ceil($margin-unit * 2);
+$margin-bottom: ceil($margin-unit * 1);
+$margin-right: ceil($margin-unit * 2);
+$margin-top: ceil($margin-unit * 2);
+$margin-large: ceil($margin-unit * 3);
 $margin-small: ($margin-unit / 2);
 $row-margin: $margin-unit * 1.6;
 $bordered-unit-padding: ($padding / 3);
