--- a/app/views/pdfs/_offences.html.erb
+++ b/app/views/pdfs/_offences.html.erb
@@ -17,34 +17,5 @@
     <li><%= t('.on_remand') %></li>
     <li><%= t('.license_recall') %></li>
   </ul>
-  <table class="bordered-table">
-    <tr>
-      <th><%= t('.offence') %></th>
-      <th><%= t('.offence_status') %></th>
-    </tr>
-    <tr>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td></td>
-    </tr>
-  </table>
+  <div class="offences-output"></div>
 </div>
