--- a/app/views/pdfs/_offences.html.erb
+++ b/app/views/pdfs/_offences.html.erb
@@ -17,5 +17,5 @@
     <li><%= t('.on_remand') %></li>
     <li><%= t('.license_recall') %></li>
   </ul>
-  <div class="offences-output"></div>
+  <div class="offences-output"><%= offences.other_offences_details %></div>
 </div>
