--- a/app/views/pdfs/_not_for_release.html.erb
+++ b/app/views/pdfs/_not_for_release.html.erb
@@ -1,6 +1,12 @@
 <div class="not-for-release">
   <div>
-    <div class="marker"><div class="check-box"></div><strong class="label-inline"><%= t('pdfs.nfr.marker_label') %></strong></div>
-    <div class="reason"><strong class="label-inline"><%= t('pdfs.nfr.reason') %></strong><div class="input-inline"></div></div>
+    <div class="marker">
+      <div class="check-box <%= not_for_release.not_for_release_class %>"></div>
+      <strong class="label-inline"><%= t('pdfs.nfr.marker_label') %></strong>
+    </div>
+    <div class="reason">
+      <strong class="label-inline"><%= t('pdfs.nfr.reason') %></strong>
+      <div class="input-inline"><%= not_for_release.not_for_release_details %></div>
+    </div>
   </div>
 </div>
