--- a/app/views/pdfs/show.html.erb
+++ b/app/views/pdfs/show.html.erb
@@ -10,15 +10,15 @@
 </head>
 <body>
 <%= render('pdfs/header') %>
-<%= render('pdfs/not_for_release') %>
+<%= render('pdfs/not_for_release', not_for_release: escort.not_for_release) %>
 <%= render('pdfs/move_information', move: escort.move) %>
 <%= render('pdfs/prisoner', prisoner: escort.prisoner) %>
 <%= render('pdfs/front_page_markers') %>
 <%= render('pdfs/updates') %>
 <%= render('pdfs/risk_summary', risks: escort.risks) %>
 <%= render('pdfs/healthcare_needs', healthcare: escort.healthcare) %>
-<%= render('pdfs/offences') %>
-<%= render('pdfs/handover_details') %>
+<%= render('pdfs/offences', offences: escort.offences) %>
+<%= render('pdfs/handover_details', handover: escort.handover) %>
 <%= render('pdfs/record_of_handover') %>
 <%= render('pdfs/checks_and_events_initial') %>
 <%= render('pdfs/checks_and_events_continuation') %>
