--- a/app/views/pdfs/show.html.erb
+++ b/app/views/pdfs/show.html.erb
@@ -13,7 +13,7 @@
 <%= render('pdfs/not_for_release', not_for_release: escort.not_for_release) %>
 <%= render('pdfs/move_information', move: escort.move) %>
 <%= render('pdfs/prisoner', prisoner: escort.prisoner) %>
-<%= render('pdfs/front_page_markers') %>
+<%= render('pdfs/front_page_markers', front_page_markers: escort.front_page_markers) %>
 <%= render('pdfs/updates') %>
 <%= render('pdfs/risk_summary', risks: escort.risks) %>
 <%= render('pdfs/healthcare_needs', healthcare: escort.healthcare) %>
