Avoid dynamically creating text toggles for risks
Now that the Risk form no longer has transit risks associated
with it it doesn't make much sense to have to have a general
risk category. This change also makes the code consistent with
other forms that use the text_toggle_attribute helper.

--- a/app/views/escorts/_risks.html.erb
+++ b/app/views/escorts/_risks.html.erb
@@ -1,4 +1,10 @@
-<% Risks::GENERAL.each do |risk| %>
+<% %i[ to_self
+       violence
+       from_others
+       escape
+       intolerant_behaviour
+       prohibited_items
+       non_association ].each do |risk| %>
   <%= render(
         'shared/toggle_with_details_field',
         f: f,
