--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,6 @@
 <%= content_for :stylesheets do %>
     <%= stylesheet_link_tag('application.css') %>
+    <!--[if IE 7]><%= stylesheet_link_tag('ie7') %><![endif]-->
     <!--[if IE 8]><%= stylesheet_link_tag('ie8') %><![endif]-->
     <!--[if IE 9]><%= stylesheet_link_tag('ie9') %><![endif]-->
 <% end %>
