Change text in invitations and set up pages

--- a/app/views/home_pages/show.html.erb
+++ b/app/views/home_pages/show.html.erb
@@ -2,6 +2,7 @@
   <div class="column-three-quarters">
     <header>
       <h1><%= t('.heading') %></h1>
+      <p><%= t('.logged_in') %></p>
       <p><%= t('.description') %></p>
     </header>
     <%= form_for form, url: search_path do |f| %>
