--- a/app/views/devise/invitations/edit.html.erb
+++ b/app/views/devise/invitations/edit.html.erb
@@ -4,6 +4,8 @@
       <h1><%= t('devise.invitations.edit.header') %></h1>
     </header>
 
+    <p><%= t('.set_password_instructions').html_safe %></p>
+
     <%= form_for(resource, as: resource_name, url: invitation_path(resource_name), html: { method: :put }) do |f| %>
       <%= devise_error_messages! %>
       <%= f.hidden_field :invitation_token %>
