Move must [not] return to offences section
Response to design change. Moves this sections HTML, SASS and YAML
from the handover details section to offences.

--- a/app/assets/stylesheets/pdf/_offences.scss
+++ b/app/assets/stylesheets/pdf/_offences.scss
@@ -1,4 +1,14 @@
 .offences {
+  .return-information {
+    @extend .marker-with-reason;
+    .marker {
+      width: 19.5%;
+    }
+    .reason > .input {
+      width: 33.25em;
+    }
+  }
+
   ul {
     @extend .bordered-left;
     list-style: none;
