--- a/app/views/pdfs/_offences.html.erb
+++ b/app/views/pdfs/_offences.html.erb
@@ -8,6 +8,28 @@
       <div class="input"></div>
     </div>
   </div>
+  <div class="return-information must-return">
+    <div>
+      <div class="marker">
+        <div class="check-box"></div>
+        <strong class="label-inline"><%= t('.must_return') %></strong></div>
+      <div class="reason">
+        <strong class="label-inline"><%= t('.reason') %></strong>
+        <div class="input-inline"></div>
+      </div>
+    </div>
+  </div>
+  <div class="return-information must-not-return">
+    <div>
+      <div class="marker">
+        <div class="check-box"></div>
+        <strong class="label-inline"><%= t('.must_not_return') %></strong></div>
+      <div class="reason">
+        <strong class="label-inline"><%= t('.reason') %></strong>
+        <div class="input-inline not-to-return"></div>
+      </div>
+    </div>
+  </div>
   <p><%= t('.instructions') %></p>
   <strong><%= t('.other_offences') %></strong>
   <p><%= t('.other_offence_instructions') %></p>
