Change Medication heading
Changes heading and refactors the CSS and YAML to best accommodate
the design changes like this.

--- a/app/assets/stylesheets/pdf/_handover_details.scss
+++ b/app/assets/stylesheets/pdf/_handover_details.scss
@@ -49,6 +49,10 @@
   }
 
   .medication-handover {
+    .heading {
+      @extend .styled-as-heading;
+      font-weight: $font-weight-bold;
+    }
     > div {
       @extend .row;
     }
