--- a/app/assets/stylesheets/pdf/_variables.scss
+++ b/app/assets/stylesheets/pdf/_variables.scss
@@ -30,6 +30,7 @@ $margin-small: ($margin-unit / 2);
 $row-margin: $margin-unit * 1.6;
 $bordered-unit-padding: ($padding / 3);
 $font-weight-standard: 400;
+$font-weight-bold: 700;
 
 // Composites
 $font-family: "Liberation Sans";
