--- a/app/views/pdfs/_handover_details.erb
+++ b/app/views/pdfs/_handover_details.erb
@@ -32,9 +32,8 @@
     </div>
   </div>
   <div class="medication-handover">
-    <div>
-      <strong class="label"><%= t('.medication_heading') %></strong>
-      <div class="instruction"><%= t('.medication_instructions') %></div>
+    <div class="heading">
+      <%= t('.medication_heading') %>
     </div>
     <div class="markers">
       <div>
