--- a/app/assets/stylesheets/pdf/_header.scss
+++ b/app/assets/stylesheets/pdf/_header.scss
@@ -1,8 +1,6 @@
 header {
   h1 {
-    font-weight: $font-weight-standard;
-    font-size: $heading-font-size;
-    margin-bottom: $margin-unit;
+    @extend .styled-as-heading;
   }
   .heading {
     width: 30%;
