Add medication administration table
Introduces the tables for:

- Medication administration
- Professional contact details

--- a/app/assets/stylesheets/pdf/_handover_details.scss
+++ b/app/assets/stylesheets/pdf/_handover_details.scss
@@ -68,6 +68,17 @@
       margin-bottom: 0;
     }
   }
+
+  .medication-administration {
+    table {
+      @extend .bordered-table;
+      margin-bottom: $margin-bottom;
+      th {
+        font-weight: $font-weight-bold;
+      }
+    }
+  }
+
 }
 
 .clock-image {
