--- a/app/views/pdfs/_handover_details.erb
+++ b/app/views/pdfs/_handover_details.erb
@@ -50,6 +50,36 @@
       </div>
     </div>
   </div>
+  <div class="medication-administration">
+    <table>
+      <tr>
+        <th><%= t('.medication_description') %></th>
+        <th><%= t('.medication_administration_info') %></th>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+      </tr>
+    </table>
+    <table>
+      <tr>
+        <th><%= t('.medical_professional') %></th>
+        <th><%= t('.contact_number') %></th>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+      </tr>
+    </table>
+  </div>
   <div class="enclosed-forms">
     <div>
       <strong class="label"><%= t('.enclosed_forms') %></strong>
