Introduce link_to_field_with_error helper
The link_to_field_with_error helper is needed to link
an error message to the field containing the error.

This helper manages the different types of fields with error.

If the field is a text toggle type, it will link to the name
of the field without _details termination.

--- a/app/views/shared/flashes/_save_errors.erb
+++ b/app/views/shared/flashes/_save_errors.erb
@@ -6,11 +6,7 @@
       <ul class="error-summary-list">
         <% object.errors.each do |attribute| %>
             <li>
-              <%= link_to(
-                    object.errors.full_messages_for(attribute).first,
-                    "##{object.class.name.underscore}_#{attribute}"
-                  )
-              %>
+              <%= link_to_field_with_error(object, attribute) %>
             </li>
         <% end %>
       </ul>
