Change format of 'Enclosed forms' heading
Updated to reflect new designs.

--- a/app/views/pdfs/_handover_details.erb
+++ b/app/views/pdfs/_handover_details.erb
@@ -81,8 +81,8 @@
     </table>
   </div>
   <div class="enclosed-forms">
-    <div>
-      <strong class="label"><%= t('.enclosed_forms') %></strong>
+    <div class="heading">
+      <%= t('.enclosed_forms') %>
     </div>
     <table class="bordered-table">
       <tr>
