--- a/app/assets/stylesheets/pdf/_handover_details.scss
+++ b/app/assets/stylesheets/pdf/_handover_details.scss
@@ -49,6 +49,7 @@
   }
 
   .medication-handover {
+    padding-top: $padding;
     .heading {
       @extend .styled-as-heading;
       font-weight: $font-weight-bold;
@@ -76,6 +77,14 @@
       th {
         font-weight: $font-weight-bold;
       }
+    }
+  }
+
+  .enclosed-forms {
+    padding-top: $padding;
+    .heading {
+      @extend .styled-as-heading;
+      font-weight: $font-weight-bold;
     }
   }
 
