Introduce 'Property, cash and medication details'
Reflects latest design, replacing previous 'Property details' heading.

--- a/app/views/pdfs/_record_of_handover.html.erb
+++ b/app/views/pdfs/_record_of_handover.html.erb
@@ -9,7 +9,7 @@
     </div>
   </div>
   <div class="property-details">
-    <strong class="label"><%= t('.property_details') %></strong>
+    <div class="heading"><%= t('.property_details') %></div>
     <div class="instructions"><%= t('.instructions') %></div>
     <ul>
       <li><strong><%= t('.valuables_code') %></strong> - <%= t('.valuables') %>
