--- a/app/assets/stylesheets/pdf/_record_of_handover.scss
+++ b/app/assets/stylesheets/pdf/_record_of_handover.scss
@@ -17,6 +17,13 @@
     }
   }
 
+  .property-details {
+    .heading {
+      @extend .styled-as-heading;
+      font-weight: $font-weight-bold;
+    }
+  }
+
   .handover-details {
     display: table;
     width: 100%;
