Update handover codes to reflect latest design
Add to and change order of codes.

--- a/app/assets/stylesheets/pdf/_record_of_handover.scss
+++ b/app/assets/stylesheets/pdf/_record_of_handover.scss
@@ -22,6 +22,10 @@
       @extend .styled-as-heading;
       font-weight: $font-weight-bold;
     }
+    li {
+      margin-top: $margin-small;
+      margin-bottom: $margin-small;
+    }
   }
 
   .handover-details {
