--- a/app/views/pdfs/_record_of_handover.html.erb
+++ b/app/views/pdfs/_record_of_handover.html.erb
@@ -12,15 +12,13 @@
     <div class="heading"><%= t('.property_details') %></div>
     <div class="instructions"><%= t('.instructions') %></div>
     <ul>
-      <li><strong><%= t('.valuables_code') %></strong> - <%= t('.valuables') %>
-      </li>
-      <li><strong><%= t('.in_possession_code') %></strong>
-        - <%= t('.in_possession') %></li>
-      <li><strong><%= t('.documentation_code') %></strong>
-        - <%= t('.documentation') %></li>
-      <li><strong><%= t('.stored_property_code') %></strong>
-        - <%= t('.stored_property') %></li>
       <li><strong><%= t('.cash_code') %></strong> - <%= t('.cash') %></li>
+      <li><strong><%= t('.documentation_code') %></strong> - <%= t('.documentation') %></li>
+      <li><strong><%= t('.in_possession_code') %></strong> - <%= t('.in_possession') %></li>
+      <li><strong><%= t('.medication_code') %></strong> - <%= t('.medication') %></li>
+      <li><strong><%= t('.open_at_court_code') %></strong> - <%= t('.open_at_court') %></li>
+      <li><strong><%= t('.stored_property_code') %></strong> - <%= t('.stored_property') %></li>
+      <li><strong><%= t('.valuables_code') %></strong> - <%= t('.valuables') %></li>
     </ul>
     <% 4.times do %>
         <div class="items">
