Add pointer to medical details
Updated to reflect latest design

--- a/app/assets/stylesheets/pdf/_healthcare_information.scss
+++ b/app/assets/stylesheets/pdf/_healthcare_information.scss
@@ -49,3 +49,13 @@
     }
   }
 }
+
+.healthcare-signpost {
+  @extend .styled-as-heading;
+  @extend .bordered-left;
+  margin-top: $margin-top;
+  &:after {
+    content: "\0025B6";
+    font-size: small;
+  }
+}
