--- a/app/views/pdfs/_healthcare_needs.html.erb
+++ b/app/views/pdfs/_healthcare_needs.html.erb
@@ -51,3 +51,7 @@
     <div class="input"></div>
   </div>
 </div>
+
+<div class="healthcare-signpost">
+  <%= t('.fill_in_details.') %> <strong><%= t('.details_section') %></strong>
+</div>
