--- a/app/assets/stylesheets/pdf/_record_of_handover.scss
+++ b/app/assets/stylesheets/pdf/_record_of_handover.scss
@@ -7,13 +7,26 @@
     margin-right: $margin-large;
   }
 
-  .items {
-    @extend .row;
+  .seal-numbers {
     > div {
-      @extend .col;
+      width: 49.75%;
+      float: left;
       &:first-child {
-        margin-right: $margin-right;
+        td, th {
+          border-color: darken($dark_grey, 20%);
+        }
       }
+      &:last-child {
+        margin-left: 0.5%;
+      }
+    }
+    table {
+      @extend .bordered-table;
+      margin-bottom: $margin-bottom;
+    }
+    img {
+      position: relative;
+      top: 3px;
     }
   }
 
