Remove superfluous 'information' suffix from forms
Now that we have consistent form & model names we can remove superflous
suffixes from the forms (this also applies to the pdf parts of the application
too).

--- a/app/views/escorts/_move.html.erb
+++ b/app/views/escorts/_move.html.erb
@@ -6,7 +6,7 @@
   <%= date_fields(f, :date_of_travel) do %>
     <%= render 'shared/date_field_inputs',
       f: f,
-      model: 'move_information',
+      model: 'move',
       date_field: 'date_of_travel',
       hint: f.object.formatted_date_today %>
   <% end %>
