--- a/app/views/escorts/_prisoner.html.erb
+++ b/app/views/escorts/_prisoner.html.erb
@@ -10,7 +10,7 @@
 <%= date_fields(f, :date_of_birth) do %>
   <%= render 'shared/date_field_inputs',
     f: f,
-    model: 'prisoner_information',
+    model: 'prisoner',
     date_field: 'date_of_birth',
     hint: nil %>
 <% end %>
