--- a/app/views/pdfs/show.html.erb
+++ b/app/views/pdfs/show.html.erb
@@ -1,28 +1,28 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta name="pdfkit-footer_right" content="<%= t('pdfs.footer.page_number') %>" />
-  <meta name="pdfkit-footer_left" content="<%= t('pdfs.footer.protective_marking') %>" />
-  <meta name="pdfkit-footer_font_size" content="10" />
-  <style>
-    <%= PdfStylesheetBuilder.html_safe_pdf_stylesheet %>
-  </style>
-</head>
-<body>
-<%= render('pdfs/header') %>
-<%= render('pdfs/not_for_release', not_for_release: escort.not_for_release) %>
-<%= render('pdfs/move_information', move: escort.move) %>
-<%= render('pdfs/prisoner', prisoner: escort.prisoner) %>
-<%= render('pdfs/front_page_markers', front_page_markers: escort.front_page_markers) %>
-<%= render('pdfs/updates') %>
-<%= render('pdfs/risk_summary', risks: escort.risks) %>
-<%= render('pdfs/healthcare_needs', healthcare: escort.healthcare) %>
-<%= render('pdfs/offences', offences: escort.offences) %>
-<%= render('pdfs/handover_details') %>
-<%= render('pdfs/record_of_handover') %>
-<%= render('pdfs/checks_and_events_initial') %>
-<%= render('pdfs/checks_and_events_continuation') %>
-<%= render('pdfs/checks_and_events_continuation') %>
-<%= render('pdfs/release_at_court_and_property') %>
-</body>
+  <head>
+    <meta name="pdfkit-footer_right" content="<%= t('pdfs.footer.page_number') %>" />
+    <meta name="pdfkit-footer_left" content="<%= t('pdfs.footer.protective_marking') %>" />
+    <meta name="pdfkit-footer_font_size" content="10" />
+    <style>
+      <%= PdfStylesheetBuilder.html_safe_pdf_stylesheet %>
+    </style>
+  </head>
+  <body>
+    <%= render('pdfs/header') %>
+    <%= render('pdfs/not_for_release', not_for_release: escort.not_for_release) %>
+    <%= render('pdfs/move', move: escort.move) %>
+    <%= render('pdfs/prisoner', prisoner: escort.prisoner) %>
+    <%= render('pdfs/front_page_markers', front_page_markers: escort.front_page_markers) %>
+    <%= render('pdfs/updates') %>
+    <%= render('pdfs/risk_summary', risks: escort.risks) %>
+    <%= render('pdfs/healthcare_needs', healthcare: escort.healthcare) %>
+    <%= render('pdfs/offences', offences: escort.offences) %>
+    <%= render('pdfs/handover_details') %>
+    <%= render('pdfs/record_of_handover') %>
+    <%= render('pdfs/checks_and_events_initial') %>
+    <%= render('pdfs/checks_and_events_continuation') %>
+    <%= render('pdfs/checks_and_events_continuation') %>
+    <%= render('pdfs/release_at_court_and_property') %>
+  </body>
 </html>
