--- a/app/views/pdfs/_handover_details.erb
+++ b/app/views/pdfs/_handover_details.erb
@@ -35,38 +35,30 @@
     <div class="heading">
       <%= t('.medication_heading') %>
     </div>
-    <div class="markers">
-      <div>
-        <div class="check-box"></div>
-        <div class="label-inline"><%= t('.no_medication') %></div>
-      </div>
-      <div>
-        <div class="check-box"></div>
-        <div class="label-inline"><%= t('.medicaton_with_escort') %></div>
-      </div>
-      <div>
-        <div class="check-box"></div>
-        <div class="label-inline"><%= t('.medication_with_prisoner') %></div>
-      </div>
+  </div>
+  <div class="markers">
+    <div>
+      <div class="check-box"></div>
+      <div class="label-inline"><%= t('.no_medication') %></div>
     </div>
   </div>
   <div class="medication-administration">
     <table>
       <tr>
+        <th colspan="2" class="hidden-borders"></th>
+        <th colspan="2" class="carried-by"><%= t('.medication_carried_by') %></th>
+      </tr>
+      <tr>
         <th><%= t('.medication_description') %></th>
         <th><%= t('.medication_administration_info') %></th>
+        <th class="narrow"><%= t('.escort') %></th>
+        <th class="narrow"><%= t('.prisoner') %></th>
       </tr>
       <tr>
         <td></td>
         <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
+        <td class="narrow"><div class="check-box"></div></td>
+        <td class="narrow"><div class="check-box"></div></td>
       </tr>
     </table>
     <table>
