Apply multiples plugin to medications
Introduces the multiples plugin to medication along with
corresponding changes to:

- Accommodate '_destroy' being a suffix to the ID, rather than value
- Manage JS issues encountered in IE7, 8 and 9 (resulting from use of
  'class' keyword within the jQuery
- Address styling issues with IE

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
 @import "elements/forms/form-validation";
 
 // Application
+@import "helper_classes";
 @import "phase_banner";
 @import "header";
 @import "layout";
@@ -26,3 +27,4 @@
 @import "risks";
 @import "search";
 @import "user_authentication";
+@import "multiples";
