--- a/app/assets/stylesheets/_forms.scss
+++ b/app/assets/stylesheets/_forms.scss
@@ -20,12 +20,10 @@
 
 .js_has_optional_section {
   .unknown_value {
+    @extend .styled-as-link;
     padding: 21px 30px 15px 5px;
     display: inline-block;
     margin-left: 0.5em;
-    font-size: 0.8em;
-    color: $govuk-blue;
-    text-decoration: underline;
   }
 
   .block-label.inline {
